--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,13 @@
       <artifactId>spring-context</artifactId>
       <version>5.3.19</version>
     </dependency>
-    
+
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.22</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
